--- a/second.html
+++ b/second.html
@@ -127,7 +127,9 @@
                     <div class="time-line-date-content ">
                         <p class="mbr-timeline-date mbr-fonts-style display-font ">
                             21 Februari 2024
-                        </p>
+                            <br> <span style="font-size: 22px; ">08.00 WIB - Selesai
+                            </span></p>
+
                     </div>
                 </div>
                 <span class="iconBackground "></span>
@@ -135,7 +137,7 @@
                     <div class="timeline-text-content ">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-font ">Lokasi</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7 ">
-                            📍 Lapangan Hijau Mako Grup C Paspampres, Lawanggintung Bogor
+                            <a href="https://maps.app.goo.gl/rKux7cF7obZawLie9" target="_blank">📍 Gedung Bima Markas Komando Grup C Paspampres</a>
                         </p>
                     </div>
                 </div>
