--- a/second.html
+++ b/second.html
@@ -35,7 +35,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&family=Protest+Revolution&display=swap" rel="stylesheet">
 
     <audio class="song" loop autoplay>
-        <source src="lagupaspampres.mp3" type="audio/mp3">
+        <source src="song.mp3" type="audio/mp3">
         </source>
 
 
@@ -93,7 +93,7 @@
                         </div>
 
                         <div class="img-profil text-center ">
-                            <img src="images/foto11.jpeg " class="w-75 mb-5 " alt=" ">
+                            <img src="images/foto22.jpeg " class="w-75 mb-5 " alt=" ">
                             <h1 class="text-white ">Mayor Inf. Rahadyan Surya Murdata, S.E., M.I.P. </h1>
 
                             <h1 class="text-white ">& </h1>
