--- a/second.html
+++ b/second.html
@@ -97,7 +97,7 @@
                             <h1 class="text-white ">Mayor Inf. Rahadyan Surya Murdata, S.E., M.I.P. </h1>
 
                             <h1 class="text-white ">& </h1>
-                            <h1 class="text-white ">Ny Sari Rahadyan</h1>
+                            <h1 class="text-white ">Ny. Sari Rahadyan</h1>
                         </div>
 
                         <div class="alamat text-center text-white ">
@@ -137,7 +137,8 @@
                     <div class="timeline-text-content ">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-font ">Lokasi</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7 ">
-                            <a href="https://maps.app.goo.gl/rKux7cF7obZawLie9" target="_blank">📍 Gedung Bima Markas Komando Grup C Paspampres</a>
+                            <a href="https://maps.app.goo.gl/rKux7cF7obZawLie9" target="_blank">📍 Lapangan Hijau Mako Grup C Paspampres,
+                                Lawanggintung Bogor</a>
                         </p>
                     </div>
                 </div>
