--- a/second.html
+++ b/second.html
@@ -212,24 +212,24 @@
             <div class="row ">
                 <div class="col-lg-12 col-sm-12 col-xs-12 ">
                     <div class="contact-block ">
-                        <form action="https://formsubmit.co/yulidrnsh@gmail.com " method="POST ">
+                        <form name="paspampres-form" method="POST ">
                             <div class="row ">
                                 <div class="col-md-12 ">
                                     <div class="form-group ">
 
-                                        <input type="text " class="form-control " id="name " name="name " placeholder="Nama Lengkap " required data-error="Please enter your name ">
+                                        <input type="text " class="form-control " id="nama " name="nama" placeholder="Nama Lengkap " required data-error="Please enter your name ">
                                         <div class="help-block with-errors "></div>
                                     </div>
                                 </div>
                                 <div class="col-md-12 ">
                                     <div class="form-group ">
-                                        <input type="email " placeholder="Hadir/Tidak" id="email " class="form-control " name="name " required data-error="Please enter your email ">
+                                        <input type="email " placeholder="Email lengkap" id="email" class="form-control " name="email" required data-error="Please enter your email ">
                                         <div class="help-block with-errors "></div>
                                     </div>
                                 </div>
                                 <div class="col-md-12 ">
                                     <div class="form-group ">
-                                        <textarea class="form-control " id="message " placeholder="Pesan Anda " rows="8 " data-error="Write your message " required></textarea>
+                                        <textarea class="form-control " id="pesan " name="pesan" placeholder="Hadir / Tidak " rows="8 " data-error="Write your pesan " required></textarea>
                                         <div class="help-block with-errors "></div>
                                     </div>
                                     <div class="submit-button text-center ">
@@ -284,6 +284,20 @@
     <!-- End Footer -->
 
     <!-- ALL JS FILES -->
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyaNIjoIsTmaN0mc1WpRih7Ex9ocKkQfbSPKCpJ9FWkEmHaHUYu3NSL3m4NSHxvesIG/exec'
+        const form = document.forms['paspampres-form']
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, {
+                    method: 'POST',
+                    body: new FormData(form)
+                })
+                .then(response => console.log('Success!', response))
+                .catch(error => console.error('Error!', error.message))
+        })
+    </script>
 
     <script>
         window.addEventListener("load ", () => {
