--- a/second.html
+++ b/second.html
@@ -294,7 +294,11 @@
                     method: 'POST',
                     body: new FormData(form)
                 })
-                .then(response => console.log('Success!', response))
+                .then(response => {
+                    //Reset Form alert
+                    form.reset();
+                    console.log('Success!', response)
+                })
                 .catch(error => console.error('Error!', error.message))
         })
     </script>
