--- a/second.html
+++ b/second.html
@@ -59,7 +59,7 @@
         color: white;
         border: none;
         border-radius: 80%;
-        padding: 10px;
+        padding: 12px;
         cursor: pointer;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
@@ -250,10 +250,7 @@
     </div>
     <!-- End Contact -->
     <button class="play-music-button" onclick="toggleMusic()">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path fill="none" d="M0 0h24v24H0V0z"/>
-            <path d="M8 5v14l11-7z"/>
-        </svg>
+       <img src="images/music.svg" alt="">
     </button>
 
     <audio id="myAudio" src="song.mp3"></audio>
