--- a/second.html
+++ b/second.html
@@ -271,7 +271,7 @@
         <div class="container ">
             <div class="row ">
                 <div class="col-lg-12 ">
-                    <p class="footer-company-name ">All Rights Reserved. &copy; 2024 Design By :Grup C Paspampres | <a href="mrifkipratama.com ">mrifkipratama.com  </a> </a>
+                    <p class="footer-company-name ">All Rights Reserved. &copy; 2024 Design By :Grup C Paspampres | <a href="https://www.mrifkipratama.com/" target="_blank">mrifkipratama.com  </a> </a>
                     </p>
                 </div>
             </div>
