--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     />
 
     <!-- Site Metas -->
-    <title>
-      Upacara dan Ramah Tamah Penyerahan Jabatan Danden-1 Grup C Paspampres
-    </title>
+    <title>ThreePoint Mojang Party Olengers</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/detasemen.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="images/threepoint.jpeg"
+      type="image/x-icon"
+    />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 
     <!-- Bootstrap CSS -->
@@ -79,7 +81,12 @@
 
   <body>
     <div id="container">
-      <img src="images/detasemen.png" alt="Your Image" />
+      <img
+        src="images/threepoint.jpeg"
+        alt="Your Image"
+        class=""
+        style="width: 300px"
+      />
       <br />
       <a href="second.html" class="text-dark">Buka Undangan</a>
     </div>
