--- a/second.html
+++ b/second.html
@@ -10,13 +10,13 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Site Metas -->
-    <title>Upacara dan Ramah Tamah Penyerahan Jabatan Danden-1 Grup C Paspampres</title>
+    <title>ThreePoint Mojang Party Olengers</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/detasemen.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/threepoint.jpeg" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
@@ -35,7 +35,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&family=Protest+Revolution&display=swap" rel="stylesheet">
 
     <audio class="song" loop autoplay>
-        <source src="song.mp3" type="audio/mp3">
+        <source src="songmojang.mp3" type="audio/mp3">
         </source>
 
 
@@ -83,7 +83,7 @@
     <header class="top-header  " style="background-color: black;">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container ">
-                <a class="navbar-brand " href="second.html "><img src="images/detasemen.png " alt="image " style="width: 50px; "></a>
+                <a class="navbar-brand " href="second.html "><img src="images/threepoint.jpeg" alt="image " style="width: 80px; "></a>
                 <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbar-wd " aria-controls="navbar-wd " aria-expanded="false " aria-label="Toggle navigation ">
 					<span></span>
 					<span></span>
@@ -104,7 +104,7 @@
 
 
     <!-- Start About us -->
-    <div id="home " class="about-box" style="background-image: url('images/bghexa.jpeg');
+    <div id="home " class="about-box" style="background-image: url('images/GRUNGE.jpg');
     background-size: cover;">
         <div class="about-a1 ">
             <div class="container ">
@@ -114,15 +114,12 @@
                             <h2><span>UNDANGAN </span>
                             </h2>
 
-                            <p class="text-white "> ACARA PENYERAHAN JABATAN <br> KOMANDAN DETASEMEN-1 GRUP C PASPAMPRES.</p>
+                            <p class="text-white "> ACARA THREE POINT <br> MOJANG PARTY</p>
                         </div>
 
                         <div class="img-profil text-center ">
-                            <img src="images/foto22.jpeg " class="w-75 mb-5 " alt=" ">
-                            <h1 class="text-white ">Mayor Inf. Rahadyan Surya Murdata, S.E., M.I.P. </h1>
+                            <img src="images/party.jpeg" class="w-75 mb-5 " alt=" ">
 
-                            <h1 class="text-white ">& </h1>
-                            <h1 class="text-white ">Ny. Sari Rahadyan</h1>
                         </div>
 
                         <div class="alamat text-center text-white ">
@@ -151,8 +148,8 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-left ">
                     <div class="time-line-date-content ">
                         <p class="mbr-timeline-date mbr-fonts-style display-font ">
-                            Rabu, 21 Februari 2024
-                            <br> <span style="font-size: 22px; ">08.00 WIB - Selesai
+                            Sabtu, 2 maret 2024
+                            <br> <span style="font-size: 22px; ">13.00 - 23.00 (closed)
                             </span></p>
 
                     </div>
@@ -162,8 +159,7 @@
                     <div class="timeline-text-content ">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-font ">Lokasi</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7 ">
-                            <a href="https://maps.app.goo.gl/uB4byUVpvbek21G9A" target="_blank">📍 Lapangan Hijau Mako Grup C Paspampres,
-                                Lawanggintung Bogor</a>
+                            <a href="https://maps.app.goo.gl/eCMpR2SuvsMMmium9" target="_blank">📍 Chanti Darma Park PMPP TNI</a>
                         </p>
                     </div>
                 </div>
@@ -181,7 +177,7 @@
                     <div class="timeline-text-content ">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-font "></h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7 ">
-                            - Militer : PDU IV <br> - IKKT : PSU <br> - Sipil : Jas (PSL) / Batik
+                            Pakaian Identitas Klub <br>
                         </p>
                     </div>
                 </div>
@@ -271,7 +267,7 @@
         <div class="container ">
             <div class="row ">
                 <div class="col-lg-12 ">
-                    <p class="footer-company-name ">All Rights Reserved. &copy; 2024 Design By : Grup C Paspampres | <a href="https://www.mrifkipratama.com/" target="_blank">mrifkipratama.com  </a> </a>
+                    <p class="footer-company-name ">All Rights Reserved. &copy; 2024 Design By : MEGALISTA | <a href="https://www.mrifkipratama.com/" target="_blank">mrifkipratama.com  </a> </a>
                     </p>
                 </div>
             </div>
